--- a/p5.js/index.html
+++ b/p5.js/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>p5.js Sketch</title>
     <script src="libraries/p5.min.js"></script>
-    <script src="sketches/sketch 3/sketch.js"></script>
-</head>
-<body>
-</body>
+    <script src="sketches/5. gravity simulation/sketch.js"></script>
+  </head>
+  <body></body>
 </html>
