--- a/html/2D.html
+++ b/html/2D.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>p5.js Sketch</title>
-    <script src="libraries/p5.min.js"></script>
-    <script src="sketches/5. gravity simulation/sketch.js"></script>
+    <script src="../libraries/p5.min.js"></script>
+    <script src="../sketches/5. gravity simulation/sketch.js"></script>
   </head>
   <body></body>
 </html>
